Crash under WebResourceLoadStatisticsStore::persistentStoragePath(WTF::String const&) https://bugs.webkit.org/show_bug.cgi?id=174205 <rdar://problem/33093552>

Reviewed by Brent Fulgham.

Make sure we isolateCopy() m_statisticsStoragePath before using it from the background
thread.

* UIProcess/WebResourceLoadStatisticsStore.cpp:
(WebKit::WebResourceLoadStatisticsStore::readDataFromDiskIfNeeded):
(WebKit::WebResourceLoadStatisticsStore::refreshFromDisk):
(WebKit::WebResourceLoadStatisticsStore::resourceLogFilePath):
(WebKit::WebResourceLoadStatisticsStore::statisticsFilePath):
(WebKit::WebResourceLoadStatisticsStore::writeStoreToDisk):
(WebKit::WebResourceLoadStatisticsStore::writeEncoderToDisk):
(WebKit::WebResourceLoadStatisticsStore::deleteStoreFromDisk):
(WebKit::WebResourceLoadStatisticsStore::startMonitoringStatisticsStorage):
(WebKit::WebResourceLoadStatisticsStore::syncWithExistingStatisticsStorageIfNeeded):
(WebKit::WebResourceLoadStatisticsStore::persistentStoragePath): Deleted.
* UIProcess/WebResourceLoadStatisticsStore.h:


Canonical link: https://commits.webkit.org/191054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219211 268f45cc-cd09-0410-ab3c-d52691b4dbfc